--- a/src/Components/Habits/habits.css
+++ b/src/Components/Habits/habits.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 2rem;
     padding: 1rem 1.5rem;
 }
 
@@ -10,4 +9,5 @@
     padding: 1rem;
     font-weight: normal;
     margin-top: 1rem;
+    margin-bottom: 2rem;
 }
